# YAMP

./: CMakeLists.txt  Makefile  README.md
cmake/: termux-aarch64-build.cmake
include/: args.h  arguments.h  ui.h  yampoptions.h  yampplayer.h
src/: CMakeLists.txt  args.c  args.cpp  arguments.cpp  main.c  main.cpp  ui.cpp  yampoptions.cpp  yampplayer.cpp  yampportaudio.cpp
yamp/: CMakeLists.txt  arguments.cpp  backend.h  main.cpp  playbackoptions.cpp  playbackoptions.h  player.cpp  player.h  yampoptions.cpp  yampoptions.h  yampplayer.cpp  yampplayer.h  yampportaudio.cpp  yampportaudio.h
yamp/audio_backends/: portaudio_backend.cpp
